2006-10-09  Michael Meeks  <michael.meeks@novell.com>

	* Version 1.1.1

	* src/control-center.c (main): add gtk_init to
	overcome console warnings wrt. display.

	* etc/YaST-gnome.desktop.in: add missing categories
	so we showup in the app browser, add Root auth bits.

2006-10-06  Michael Meeks  <michael.meeks@novell.com>

	* src/control-center.c: prune bogus includes.

2006-10-06  Michael Meeks  <michael.meeks@novell.com>

	* src/Makefile.am: rename the binary, tweak some
	strings.

	* etc/Makefile.am (desktop_DATA, schemas_DATA): 
	rename files to be more verbose & similar to
	existing yast2 stuff.

2006-10-06  Michael Meeks  <michael.meeks@novell.com>

	* Revision 33253 worked.

2006-10-06  Michael Meeks  <michael.meeks@novell.com>

	* Checkin yast2-control-center-gnome
