@@ -1,3 +1,8 @@
+2006-10-30  Scott Reeves  <sreeves@novell.com>
+	* src/control-center.c:
+	Roll in latest updates from gnome-main-menu CC.
+	Fix to build with new gnome-main-menu (2006-10-25 changes)
+
 2006-10-09  Michael Meeks  <michael.meeks@novell.com>
 
 	* Version 1.1.1
